# esp_networking

./: CMakeLists.txt  README.md
client/src/: main.cpp
client/src/networking/: tcp_client.cpp  tcp_client.hpp
client/src/task_events/: tcp_send_event.hpp
client/src/tasks/: tcp_task.hpp
common/: CMakeLists.txt
common/src/: packet_registry.hpp  registry.hpp
common/src/common/core/: serialisation.hpp
headless/src/: main.cpp
headless/src/networking/: tcp_connection.hpp  tcp_macros.hpp  tcp_server.hpp
host/src/: main.cpp
host/src/host/: main.cpp
host/src/host/networking/: tcp_connection.hpp  tcp_io_state.cpp  tcp_io_state.hpp  tcp_server.cpp  tcp_server.hpp
host/src/networking/: tcp_connection.hpp  tcp_io_state.hpp  tcp_server.hpp
server_gui/src/: test.h
server_gui/src/networking/: tcp_server.hpp
tests/: test_serialisation.cpp
